--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
   <h1>Sign-up Form</h1>
-  <button type="submit" class="btn">Push Me</button>
+  <form action="">
+    <label for="first_name">FIRST NAME</label><br>
+    <input type="text" name="first_name"><br>
+
+    <label for="last_name">LAST NAME</label><br>
+    <input type="text" name="last_name">
+  </form>
+  <button type="submit" class="btn">Create Account</button>
 </body>
 <script src="app.js"></script>
 </html>
