all html inputs added

--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
 </head>
 <body>
   <h1>Sign-up Form</h1>
-  <form action="">
-    <label for="first_name">FIRST NAME</label><br>
-    <input type="text" name="first_name"><br>
+  <form class="sign_up" action="">
+    <label for="first_name">FIRST NAME</label>
+    <input type="text" name="first_name">
 
-    <label for="last_name">LAST NAME</label><br>
+    <label for="last_name">LAST NAME</label>
     <input type="text" name="last_name">
+
+    <label for="email">EMAIL</label>
+    <input type="email" name="email">
+
+    <label for="phone">PHONE NUMBER</label>
+    <input type="text" name="phone">
+
   </form>
   <button type="submit" class="btn">Create Account</button>
 </body>
