--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 
   </form>
   <button type="submit" class="btn">Create Account</button>
+
+  <footer>
+    <p>Already have an account? <a href="google.com">Log in</a></p>
+  </footer>
 </body>
 <script src="app.js"></script>
 </html>
