--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Sign-up Form</title>
+  <title>Sign-Up Form</title>
 </head>
 <body>
   <h1>Sign-up Form</h1>
@@ -23,11 +23,16 @@
     <input type="text" name="phone">
 
   </form>
+
+  <div class="logo">
+
+  </div>
   <button type="submit" class="btn">Create Account</button>
 
   <footer>
     <p>Already have an account? <a href="google.com">Log in</a></p>
   </footer>
+  
+  <script src="app.js"></script>
 </body>
-<script src="app.js"></script>
 </html>
