upgraded background image and split screen

--- a/index.html
+++ b/index.html
@@ -8,31 +8,38 @@
   <title>Sign-Up Form</title>
 </head>
 <body>
-  <h1>Sign-up Form</h1>
-  <form class="sign_up" action="">
-    <label for="first_name">FIRST NAME</label>
-    <input type="text" name="first_name">
 
-    <label for="last_name">LAST NAME</label>
-    <input type="text" name="last_name">
+  <div class="main">
 
-    <label for="email">EMAIL</label>
-    <input type="email" name="email">
+    <div class="left">
+      <h1>left</h1>
+    </div>
 
-    <label for="phone">PHONE NUMBER</label>
-    <input type="text" name="phone">
+    <div class="right">
+      <form class="sign_up" action="">
+        <label for="first_name">FIRST NAME</label>
+        <input type="text" name="first_name">
 
-  </form>
+        <label for="last_name">LAST NAME</label>
+        <input type="text" name="last_name">
 
-  <div class="logo">
+        <label for="email">EMAIL</label>
+        <input type="email" name="email">
+
+        <label for="phone">PHONE NUMBER</label>
+        <input type="text" name="phone">
+
+      </form>
+    </div>
 
   </div>
+
   <button type="submit" class="btn">Create Account</button>
 
   <footer>
     <p>Already have an account? <a href="google.com">Log in</a></p>
   </footer>
-  
+
   <script src="app.js"></script>
 </body>
 </html>
