added three divs for right side info

--- a/index.html
+++ b/index.html
@@ -12,29 +12,45 @@
   <div class="main">
 
     <div class="left">
-      <h1>left</h1>
+      <h1>Ocean Monterey</h1>
     </div>
 
     <div class="right">
-      <form class="sign_up" action="">
-        <label for="first_name">FIRST NAME</label>
-        <input type="text" name="first_name">
 
-        <label for="last_name">LAST NAME</label>
-        <input type="text" name="last_name">
+      <div class="writing">
+        <p>This is not a real online service! You know you need something
+          like this in your life to help you realize your deepest dreams.
+          Sign up <em><b>now</b></em> to get started.
+        </p>
+      </div>
+      <div class="form">
 
-        <label for="email">EMAIL</label>
-        <input type="email" name="email">
+        <form class="sign_up" action="">
 
-        <label for="phone">PHONE NUMBER</label>
-        <input type="text" name="phone">
+          <label for="first_name">FIRST NAME</label>
+          <input type="text" name="first_name">
 
-      </form>
+          <label for="last_name">LAST NAME</label>
+          <input type="text" name="last_name">
+
+          <label for="email">EMAIL</label>
+          <input type="email" name="email">
+
+          <label for="phone">PHONE NUMBER</label>
+          <input type="text" name="phone">
+
+        </form>
+
+      </div>
+
+      <div class="button">
+        <button type="submit" class="btn">Create Account</button>
+      </div>
+
     </div>
 
   </div>
 
-  <button type="submit" class="btn">Create Account</button>
 
   <footer>
     <p>Already have an account? <a href="google.com">Log in</a></p>
