formatting divs con't

--- a/index.html
+++ b/index.html
@@ -42,15 +42,18 @@
         </form>
 
       </div>
+      
+      <div class="bottom">
+        <div class="button">
+          <button type="submit" class="btn">Create Account</button>
+        </div>
 
-      <div class="button">
-        <button type="submit" class="btn">Create Account</button>
+        <footer>
+          <p>Already have an account? <a href="google.com">Log in</a></p>
+        </footer>
+
       </div>
 
-      <footer>
-        <p>Already have an account? <a href="google.com">Log in</a></p>
-      </footer>
-      
     </div>
 
   </div>
