styling three right divs

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
     <div class="right">
 
       <div class="writing">
-        <p>This is not a real online service! You know you need something
+        <h2>This is not a real online service! You know you need something
           like this in your life to help you realize your deepest dreams.
           Sign up <em><b>now</b></em> to get started.
-        </p>
+          <br><br>
+          You <em>know</em> you want to.
+        </h2>
       </div>
       <div class="form">
 
@@ -42,7 +44,7 @@
         </form>
 
       </div>
-      
+
       <div class="bottom">
         <div class="button">
           <button type="submit" class="btn">Create Account</button>
