added all labels and inputs to middle form

--- a/index.html
+++ b/index.html
@@ -25,24 +25,37 @@
           You <em>know</em> you want to.
         </h2>
       </div>
-      <div class="form">
+      <div class="middle">
 
-        <form class="sign_up" action="">
+        <h3>Let's do this!</h3>
 
-          <label for="first_name">FIRST NAME</label>
-          <input type="text" name="first_name">
+        <form action="" method="get" class="form">
 
-          <label for="last_name">LAST NAME</label>
-          <input type="text" name="last_name">
+          <div class="form_left">
+            <label for="first_name">FIRST NAME</label>
+            <input type="text" name="first_name">
 
-          <label for="email">EMAIL</label>
-          <input type="email" name="email">
+            <label for="email">EMAIL</label>
+            <input type="email" name="email">
 
-          <label for="phone">PHONE NUMBER</label>
-          <input type="text" name="phone">
+            <label for="password">PASSWORD</label>
+            <input type="password" name="password">
+
+          </div>
+
+          <div class="form_right">
+            <label for="last_name">LAST NAME</label>
+            <input type="text" name="last_name">
+
+
+            <label for="phone">PHONE NUMBER</label>
+            <input type="text" name="phone">
+
+            <label for="confirm_password">CONFIRM PASSWORD</label>
+            <input type="password" name="confirm_password">
+          </div>
 
         </form>
-
       </div>
 
       <div class="bottom">
