adding form div for each label and input

--- a/index.html
+++ b/index.html
@@ -32,27 +32,41 @@
         <form action="" method="get" class="form">
 
           <div class="form_left">
-            <label for="first_name">FIRST NAME</label>
-            <input type="text" name="first_name">
 
-            <label for="email">EMAIL</label>
-            <input type="email" name="email">
+            <div class="form-div">
+              <label for="first_name">First Name</label>
+              <input type="text" name="first_name">
+            </div>
 
-            <label for="password">PASSWORD</label>
-            <input type="password" name="password">
+            <div class="form-div">
+              <label for="email">Email</label>
+              <input type="email" name="email">
+            </div>
+
+            <div class="form-div">
+              <label for="password">Password</label>
+              <input type="password" name="password">
+            </div>
 
           </div>
 
           <div class="form_right">
-            <label for="last_name">LAST NAME</label>
-            <input type="text" name="last_name">
 
+            <div class="form-div">
+              <label for="last_name">Last Name</label>
+              <input type="text" name="last_name">
+            </div>
 
-            <label for="phone">PHONE NUMBER</label>
-            <input type="text" name="phone">
+            <div class="form-div">
+              <label for="phone">Phone Number</label>
+              <input type="text" name="phone">
+            </div>
 
-            <label for="confirm_password">CONFIRM PASSWORD</label>
-            <input type="password" name="confirm_password">
+            <div class="form-div">
+              <label for="confirm_password">Confirm Password</label>
+              <input type="password" name="confirm_password">
+            </div>
+
           </div>
 
         </form>
@@ -72,8 +86,6 @@
     </div>
 
   </div>
-
-
 
   <script src="app.js"></script>
 </body>
