formatting form divs using flexbox

--- a/index.html
+++ b/index.html
@@ -27,44 +27,52 @@
       </div>
       <div class="middle">
 
-        <h3>Let's do this!</h3>
+        <h3 style="margin-left: 50px">Let's do this!</h3>
 
         <form action="" method="get" class="form">
 
           <div class="form_left">
 
-            <div class="form-div">
-              <label for="first_name">First Name</label>
-              <input type="text" name="first_name">
-            </div>
+            <div class="form-divs">
 
-            <div class="form-div">
-              <label for="email">Email</label>
-              <input type="email" name="email">
-            </div>
+              <div class="form-div">
+                <label for="first_name">First Name</label>
+                <input type="text" id="firstName" name="first_name">
+              </div>
 
-            <div class="form-div">
-              <label for="password">Password</label>
-              <input type="password" name="password">
+              <div class="form-div">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email">
+              </div>
+
+              <div class="form-div">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password">
+              </div>
+
             </div>
 
           </div>
 
           <div class="form_right">
 
-            <div class="form-div">
-              <label for="last_name">Last Name</label>
-              <input type="text" name="last_name">
-            </div>
+            <div class="form-divs">
+              
+              <div class="form-div">
+                <label for="last_name">Last Name</label>
+                <input type="text" id="lastName" name="last_name">
+              </div>
 
-            <div class="form-div">
-              <label for="phone">Phone Number</label>
-              <input type="text" name="phone">
-            </div>
+              <div class="form-div">
+                <label for="phone">Phone Number</label>
+                <input type="tel" id="phoneNumber" name="phone">
+              </div>
 
-            <div class="form-div">
-              <label for="confirm_password">Confirm Password</label>
-              <input type="password" name="confirm_password">
+              <div class="form-div">
+                <label for="confirm_password">Confirm Password</label>
+                <input type="password" id="confirmPassword" name="confirm_password">
+              </div>
+
             </div>
 
           </div>
