formatting inputs, border, height, etc.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="form_right">
 
             <div class="form-divs">
-              
+
               <div class="form-div">
                 <label for="last_name">Last Name</label>
                 <input type="text" id="lastName" name="last_name">
@@ -82,7 +82,7 @@
 
       <div class="bottom">
         <div class="button">
-          <button type="submit" class="btn">Create Account</button>
+          <button type="submit" style="margin-left: 20px" class="btn">Create Account</button>
         </div>
 
         <footer>
