--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
 
               <div class="form-div">
                 <label for="confirm_password">Confirm Password</label>
-                <input type="password" id="confirmPassword" name="confirm_password">
+                <input type="password" id="confirmPassword" name="confirm_password"
+                pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least
+                one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
               </div>
 
             </div>
