--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <div class="main">
 
     <div class="left">
-      <h1>Ocean Monterey</h1>
+      <div class="left-div">
+        <h1>Ocean Monterey</h1>
+      </div>
     </div>
 
     <div class="right">
@@ -25,6 +27,7 @@
           You <em>know</em> you want to.
         </h2>
       </div>
+
       <div class="middle">
 
         <h3 style="margin-left: 50px">Let's do this!</h3>
@@ -47,7 +50,9 @@
 
               <div class="form-div">
                 <label for="password">Password</label>
-                <input type="password" id="password" name="password">
+                <input type="password" id="password" name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                title="Must contain at least one number and one uppercase and lowercase
+                letter, and at least 8 or more characters" required>
               </div>
 
             </div>
@@ -70,9 +75,7 @@
 
               <div class="form-div">
                 <label for="confirm_password">Confirm Password</label>
-                <input type="password" id="confirmPassword" name="confirm_password"
-                pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least
-                one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
+                <input type="password" id="confirmPassword" name="confirm_password" required>
               </div>
 
             </div>
