--- a/index.html
+++ b/index.html
@@ -39,32 +39,22 @@
             <div class="form-divs">
 
               <div class="form-div">
-                <label for="first_name">First Name</label>
+                <label for="first_name">FIRST NAME</label>
                 <input type="text" id="firstName" name="first_name">
               </div>
 
               <div class="form-div">
-                <label for="email">Email</label>
+                <label for="email">EMAIL</label>
                 <input type="email" id="email" name="email">
               </div>
 
               <div class="form-div">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-                title="Must contain at least one number and one uppercase and lowercase
-                letter, and at least 8 or more characters" required>
+                <label for="password">PASSWORD</label>
+                <input type="password" id="password" name="password" required>
+                <p id="error">**Passwords must match</p>
               </div>
 
             </div>
-
-            <!-- <div id="message">
-              <h3>Password must contain the following:</h3>
-              <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
-              <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
-              <p id="number" class="invalid">A <b>number</b></p>
-              <p id="length" class="invalid">Minimum <b>8 characters</b></p>
-            </div> -->
-
 
           </div>
 
@@ -73,17 +63,17 @@
             <div class="form-divs">
 
               <div class="form-div">
-                <label for="last_name">Last Name</label>
+                <label for="last_name">LAST NAME</label>
                 <input type="text" id="lastName" name="last_name">
               </div>
 
               <div class="form-div">
-                <label for="phone">Phone Number</label>
+                <label for="phone">PHONE NUMBER</label>
                 <input type="tel" id="phoneNumber" name="phone">
               </div>
 
               <div class="form-div">
-                <label for="confirm_password">Confirm Password</label>
+                <label for="confirm_password">CONFIRM PASSWORD</label>
                 <input type="password" id="confirmPassword" name="confirm_password" required>
               </div>
 
