formatting btn and hyperlink

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
           <button type="submit" style="margin-left: 20px" class="btn">Create Account</button>
         </div>
 
-        <footer>
-          <p>Already have an account? <a href="google.com">Log in</a></p>
-        </footer>
+        <div class="hyperlink">
+          <p>Already have an account? <a href="">Log in</a></p>
+        </div>
 
       </div>
 
