centering photo credit, adding hyperlink

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <div class="left-div">
         <h1>Ocean Monterey</h1>
       </div>
+      <div class="forFooter">
+        <p>Photo by <a class="a-footer" href="https://unsplash.com/photos/eGD69I3ODC4">Michael Krahn</a> on <a class="a-footer" href="unsplash.com" target="blank">Unsplash</a></p>
+      </div>
     </div>
 
     <div class="right">
@@ -90,7 +93,7 @@
         </div>
 
         <div class="hyperlink">
-          <p>Already have an account? <a href="">Log in</a></p>
+          <p>Already have an account? <a class="login" href="">Log in</a></p>
         </div>
 
       </div>
