added OM logo, sized appropriately

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <div class="left">
       <div class="left-div">
+        <img src="./images/OM Logo 2 copy.jpg" alt="om-logo" class="logo">
         <h1>Ocean Monterey</h1>
       </div>
       <div class="forFooter">
